crates/ui/src/screens/battle/snapshots/trpg_ui__screens__battle__skill_tests__skill_menu_with_no_uses_left_snapshot.snap
---
source: crates/ui/src/screens/battle/skill_tests.rs
expression: "render(&s, &c).to_snapshot(&c.palette)"
---
                                                                      ╔════════════════════════════╗
                                                                      ║ Plain                      ║
                                                                      ║ DEF +0  AVO +0             ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║ Test Knight                ║
                                                                      ║ Guard  Lv 1                ║
                                                                      ║ HP 20/20   ██████████      ║
                                                                      ║ Player                     ║
                                                                      ║                            ║
                                                                      ║                            ║
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      ║                            ║
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                      ║                            ║
                    ≈≈≈≈≈≈====······Br..♣♣♣♣....                      ║                            ║
                    ..≈≈≈≈..··..............╦╦..                      ║                            ║
                    ....Ar····....Br..▓▓▓▓▓▓▓▓..                      ║                            ║
                    ..♣♣··Lo..╦┌───────────────────────────────┐      ║                            ║
                    ♣♣♣♣··..Kn.│ Brace       0/3  no uses left │      ║                            ║
                    ♣♣♠♠··.....│ Fortify     2/2               │      ║                            ║
                               └───────────────────────────────┘      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ╚════════════════════════════╝
                                                     w danger zone: OFF · Shift+Space auto-end: OFF 
 arrows choose · f confirm · d back                                                        F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcdddddccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabceeeeeeeeeeeccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccffffffffffccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcggggggcccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhhhhhiiiijjjjkkkkllllmmmmnnaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhhhiiiijjjjooppookkkkmmmmmmaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhiiiiqqqqoooooorrjjkkkkjjjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaajjiiiijjoojjjjjjjjjjjjjjssjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaajjjjttoooojjjjrrjjuuuuuuuujjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaajjkkoovvjjsbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaakkkkoojjvvjbgggggggggggggggggwwwwwwwwwwwwwgbaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaakklloojjjjjbxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxbaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaayyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyya
ayyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaayyyyyyyya
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:player bg:panel_bg
f = fg:hp_high bg:panel_bg
g = fg:text_dim bg:panel_bg
h = fg:water bg:sea
i = fg:water bg:water_bg
j = fg:grass bg:grass_bg
k = fg:forest bg:forest_bg
l = fg:thicket bg:thicket_bg
m = fg:mountain bg:mountain_bg
n = fg:peak bg:peak_bg
o = fg:road bg:road_bg
p = fg:enemy bg:road_bg
q = fg:wood bg:water_bg
r = fg:enemy bg:grass_bg
s = fg:fort bg:fort_bg
t = fg:player bg:road_bg
u = fg:stone bg:stone_bg
v = fg:player bg:grass_bg
w = fg:hp_low bg:panel_bg
x = fg:panel_bg bg:panel_border_focus
y = fg:text_dim bg:black
--- overlays ---
over  208,270 16x2  hp_high
over  224,286 16x2  hp_high
over  192,254 16x2  hp_high
over  288,222 16x2  hp_high
over  272,254 16x2  hp_high
over  272,206 16x2  hp_high
